fix z-index

--- a/src/assets/app.scss
+++ b/src/assets/app.scss
@@ -6,3 +6,7 @@
 .n-input .n-input__placeholder {
   font-size: 12px;
 }
+
+.v-binder-follower-container {
+  z-index: 999993 !important;
+}
